--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
         "start": "cross-env-shell NODE_ENV=development node --require @babel/register \"./scripts/webpack/start.js\"",
         "build": "cross-env-shell NODE_ENV=production node --require @babel/register \"./scripts/webpack/build.js\"",
         "analyze": "webpack-bundle-analyzer \"./build/stats.json\"",
-        "serve": "serve \"./build\" -s"
+        "serve": "serve \"./build\" -s",
+        "gen": "graphql-codegen --config graphql-codegen.yml"
     },
     "dependencies": {
         "@apollo/react-hooks": "^3.1.3",
@@ -21,12 +22,11 @@
         "graphql": "^14.6.0",
         "graphql-tag": "^2.10.3",
         "lodash-es": "4.17.11",
-        "react": "16.8.1",
+        "react": "^16.13.0",
         "react-coverflow": "^0.2.20",
-        "react-dom": "16.8.1",
-        "react-loadable": "5.5.0",
-        "react-router-dom": "4.3.1",
-        "react-router-redux": "^4.0.8",
+        "react-dom": "^16.13.0",
+        "react-loadable": "^5.5.0",
+        "react-router-dom": "^5.1.2",
         "store": "^2.0.12",
         "styled-components": "^5.0.0",
         "styled-reset": "^4.1.0"
@@ -40,6 +40,7 @@
         "@babel/preset-env": "7.3.1",
         "@babel/preset-react": "7.0.0",
         "@babel/register": "7.0.0",
+        "@graphql-codegen/cli": "^1.12.2",
         "@lectrum/eslint-config-core": "1.1.15",
         "@svgr/webpack": "4.1.0",
         "@types/node": "^13.7.4",
@@ -78,6 +79,10 @@
         "webpack-dev-server": "3.1.14",
         "webpack-hot-middleware": "2.24.3",
         "webpack-merge": "4.2.1",
-        "webpackbar": "3.1.5"
+        "webpackbar": "3.1.5",
+        "@graphql-codegen/typescript": "1.12.2",
+        "@graphql-codegen/typescript-operations": "1.12.2",
+        "@graphql-codegen/typescript-react-apollo": "1.12.2",
+        "@graphql-codegen/introspection": "1.12.2"
     }
 }
