--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
         "apollo-link": "^1.2.13",
         "apollo-link-error": "^1.1.12",
         "apollo-link-http": "^1.5.16",
+        "apollo-link-token-refresh": "^0.2.7",
+        "core-js": "^3.6.4",
         "graphql": "^14.6.0",
         "graphql-tag": "^2.10.3",
+        "jwt-decode": "^2.2.0",
         "lodash-es": "4.17.11",
         "react": "^16.13.0",
         "react-coverflow": "^0.2.20",
@@ -32,30 +35,37 @@
         "styled-reset": "^4.1.0"
     },
     "devDependencies": {
-        "@babel/core": "7.2.2",
-        "@babel/plugin-proposal-class-properties": "7.3.0",
-        "@babel/plugin-syntax-async-generators": "7.2.0",
-        "@babel/plugin-syntax-dynamic-import": "7.2.0",
-        "@babel/polyfill": "7.2.5",
-        "@babel/preset-env": "7.3.1",
-        "@babel/preset-react": "7.0.0",
-        "@babel/register": "7.0.0",
+        "@babel/core": "^7.8.7",
+        "@babel/plugin-proposal-class-properties": "^7.8.3",
+        "@babel/plugin-syntax-async-generators": "^7.8.4",
+        "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+        "@babel/preset-env": "^7.8.7",
+        "@babel/preset-react": "^7.8.3",
+        "@babel/preset-typescript": "^7.8.3",
+        "@babel/register": "^7.8.6",
         "@graphql-codegen/cli": "^1.12.2",
+        "@graphql-codegen/introspection": "1.12.2",
+        "@graphql-codegen/typescript": "1.12.2",
+        "@graphql-codegen/typescript-operations": "1.12.2",
+        "@graphql-codegen/typescript-react-apollo": "1.12.2",
         "@lectrum/eslint-config-core": "1.1.15",
-        "@svgr/webpack": "4.1.0",
+        "@svgr/webpack": "^5.2.0",
+        "@types/jwt-decode": "^2.2.1",
         "@types/node": "^13.7.4",
         "@types/react": "^16.9.22",
         "@types/react-dom": "^16.9.5",
         "@types/react-router-dom": "^5.1.3",
         "@types/styled-components": "^5.0.0",
+        "@typescript-eslint/eslint-plugin": "^2.22.0",
+        "@typescript-eslint/parser": "^2.22.0",
         "app-root-path": "2.1.0",
         "awesome-typescript-loader": "^5.2.1",
         "babel-eslint": "10.0.1",
-        "babel-loader": "8.0.5",
-        "babel-plugin-dynamic-import-node": "2.2.0",
+        "babel-loader": "^8.0.6",
+        "babel-plugin-dynamic-import-node": "^2.3.0",
         "babel-plugin-styled-components": "^1.10.7",
-        "clean-webpack-plugin": "1.0.1",
-        "cross-env": "5.2.0",
+        "clean-webpack-plugin": "^1.0.1",
+        "cross-env": "^7.0.2",
         "detect-port-alt": "1.1.6",
         "eslint": "5.13.0",
         "file-loader": "3.0.1",
@@ -79,10 +89,6 @@
         "webpack-dev-server": "3.1.14",
         "webpack-hot-middleware": "2.24.3",
         "webpack-merge": "4.2.1",
-        "webpackbar": "3.1.5",
-        "@graphql-codegen/typescript": "1.12.2",
-        "@graphql-codegen/typescript-operations": "1.12.2",
-        "@graphql-codegen/typescript-react-apollo": "1.12.2",
-        "@graphql-codegen/introspection": "1.12.2"
+        "webpackbar": "3.1.5"
     }
 }
