--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,12 @@
 {
     "compilerOptions": {
-      "target": "es5",
+      "target": "es6",
       "lib": [
         "dom",
         "dom.iterable",
         "esnext"
       ],
+      "sourceMap": true,
       "allowJs": true,
       "skipLibCheck": true,
       "esModuleInterop": true,
@@ -17,7 +18,13 @@
       "resolveJsonModule": true,
       "isolatedModules": true,
       "noEmit": true,
-      "jsx": "react"
+      "jsx": "react",
+      "rootDir": "src",
+
+    },
+    "awesomeTypescriptLoaderOptions": {
+      "useBabel": true,
+      "babelCore": "@babel/core", // needed for Babel v7
     },
     "include": [
       "src"
