--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
         "graphql": "^14.6.0",
         "graphql-tag": "^2.10.3",
         "jwt-decode": "^2.2.0",
-        "lodash-es": "4.17.11",
         "react": "^16.13.0",
         "react-coverflow": "^0.2.20",
         "react-dom": "^16.13.0",
@@ -67,28 +66,28 @@
         "clean-webpack-plugin": "^1.0.1",
         "cross-env": "^7.0.2",
         "detect-port-alt": "1.1.6",
-        "eslint": "5.13.0",
-        "file-loader": "3.0.1",
-        "friendly-errors-webpack-plugin": "1.7.0",
+        "eslint": "^6.8.0",
+        "file-loader": "^5.1.0",
+        "friendly-errors-webpack-plugin": "^1.7.0",
         "html-webpack-plugin": "3.2.0",
         "imagemin-mozjpeg": "8.0.0",
-        "imagemin-pngquant": "7.0.0",
-        "imagemin-svgo": "7.0.0",
-        "imagemin-webpack": "4.1.0",
+        "imagemin-pngquant": "^8.0.0",
+        "imagemin-svgo": "^7.1.0",
+        "imagemin-webpack": "^5.1.1",
         "inquirer": "6.2.2",
-        "moment": "2.22.2",
-        "react-dev-utils": "7.0.3",
-        "react-hot-loader": "4.6.5",
-        "serve": "10.1.1",
+        "moment": "^2.24.0",
+        "react-dev-utils": "^10.2.0",
+        "react-hot-loader": "^4.6.5",
+        "serve": "^11.3.0",
         "source-map-loader": "^0.2.4",
         "style-loader": "0.23.1",
         "ts-loader": "^6.2.1",
         "typescript": "^3.8.2",
         "webpack": "4.29.1",
-        "webpack-bundle-analyzer": "3.0.4",
-        "webpack-dev-server": "3.1.14",
-        "webpack-hot-middleware": "2.24.3",
-        "webpack-merge": "4.2.1",
-        "webpackbar": "3.1.5"
+        "webpack-bundle-analyzer": "^3.6.0",
+        "webpack-dev-server": "^3.1.14",
+        "webpack-hot-middleware": "^2.25.0",
+        "webpack-merge": "^4.2.2",
+        "webpackbar": "^4.0.0"
     }
 }
