--- a/package.json
+++ b/package.json
@@ -12,8 +12,6 @@
     },
     "dependencies": {
         "@apollo/react-hooks": "^3.1.3",
-        "@types/react-loadable": "^5.5.3",
-        "apollo-boost": "^0.4.7",
         "apollo-cache-inmemory": "^1.6.5",
         "apollo-client": "^2.6.8",
         "apollo-link": "^1.2.13",
@@ -47,16 +45,16 @@
         "@graphql-codegen/typescript": "1.12.2",
         "@graphql-codegen/typescript-operations": "1.12.2",
         "@graphql-codegen/typescript-react-apollo": "1.12.2",
-        "@lectrum/eslint-config-core": "1.1.15",
         "@svgr/webpack": "^5.2.0",
         "@types/jwt-decode": "^2.2.1",
         "@types/node": "^13.7.4",
         "@types/react": "^16.9.22",
         "@types/react-dom": "^16.9.5",
+        "@types/react-loadable": "^5.5.3",
         "@types/react-router-dom": "^5.1.3",
         "@types/styled-components": "^5.0.0",
-        "@typescript-eslint/eslint-plugin": "^2.22.0",
-        "@typescript-eslint/parser": "^2.22.0",
+        "@typescript-eslint/eslint-plugin": "^2.23.0",
+        "@typescript-eslint/parser": "^2.23.0",
         "app-root-path": "2.1.0",
         "awesome-typescript-loader": "^5.2.1",
         "babel-eslint": "10.0.1",
@@ -67,6 +65,11 @@
         "cross-env": "^7.0.2",
         "detect-port-alt": "1.1.6",
         "eslint": "^6.8.0",
+        "eslint-plugin-babel": "^5.3.0",
+        "eslint-plugin-import": "^2.20.1",
+        "eslint-plugin-jest": "^23.8.2",
+        "eslint-plugin-react": "^7.19.0",
+        "eslint-plugin-react-hooks": "^2.5.0",
         "file-loader": "^5.1.0",
         "friendly-errors-webpack-plugin": "^1.7.0",
         "html-webpack-plugin": "3.2.0",
