--- a/package.json
+++ b/package.json
@@ -23,9 +23,9 @@
         "core-js": "^3.6.4",
         "graphql": "^14.6.0",
         "graphql-tag": "^2.10.3",
+        "immer": "^6.0.1",
         "jwt-decode": "^2.2.0",
         "react": "^16.13.0",
-        "react-coverflow": "^0.2.20",
         "react-dom": "^16.13.0",
         "react-router-dom": "^5.1.2",
         "store": "^2.0.12",
@@ -53,6 +53,7 @@
         "@types/react-dom": "^16.9.5",
         "@types/react-loadable": "^5.5.3",
         "@types/react-router-dom": "^5.1.3",
+        "@types/store": "^2.0.2",
         "@types/styled-components": "^5.0.0",
         "@typescript-eslint/eslint-plugin": "^2.23.0",
         "@typescript-eslint/parser": "^2.23.0",
@@ -88,6 +89,7 @@
         "style-loader": "0.23.1",
         "ts-loader": "^6.2.1",
         "typescript": "^3.8.2",
+        "typescript-plugin-styled-components": "^1.4.4",
         "webpack": "4.29.1",
         "webpack-bundle-analyzer": "^3.6.0",
         "webpack-dev-server": "^3.1.14",
