--- a/.eslintrc.yaml
+++ b/.eslintrc.yaml
@@ -294,6 +294,11 @@ rules:
     no-process-exit: 2
     no-restricted-modules: 2
     no-sync: 0
+    object-curly-spacing:
+        - 2
+        - always
+        - arraysInObjects: false
+          objectsInObjects: false
     array-bracket-newline:
         - 2
         - multiline: true
@@ -347,10 +352,6 @@ rules:
         - cb
     id-length: 0
     implicit-arrow-linebreak: error
-    indent:
-        - 2
-        - 4
-        - SwitchCase: 1
     jsx-quotes:
         - 2
         - prefer-single
@@ -462,3 +463,9 @@ rules:
         # TypeScript
     # "@typescript-eslint/no-unused-vars-experimental": 2
     "@typescript-eslint/no-unused-vars": 2
+    "@typescript-eslint/indent":
+        - 2
+        - 4
+        - SwitchCase: 1
+          MemberExpression: 1
+          ArrayExpression: 1
