--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "osbb-frontend",
-    "version": "1.0.0",
+    "name": "portfolio-frontend",
+    "version": "0.5.0",
     "author": "hydrophonixfx@gmail.com",
     "private": true,
     "scripts": {
@@ -10,10 +10,13 @@
         "serve": "serve \"./build\" -s",
         "gen": "graphql-codegen --config graphql-codegen.yml",
         "apollo:schema": "apollo service:download graphqlSchema.json",
-        "apollo:gen": "apollo codegen:generate --localSchemaFile=graphqlSchema.json --target=typescript --globalTypesFile=src/@types/graphql-global-types.ts ./types"
+        "apollo:gen": "apollo codegen:generate --localSchemaFile=graphqlSchema.json --target=typescript --globalTypesFile=src/@types/graphql-global-types.ts \"../types\""
     },
     "dependencies": {
         "@apollo/react-hooks": "^3.1.3",
+        "@fortawesome/fontawesome-svg-core": "^1.2.27",
+        "@fortawesome/free-solid-svg-icons": "^5.12.1",
+        "@fortawesome/react-fontawesome": "^0.1.9",
         "apollo-cache-inmemory": "^1.6.5",
         "apollo-client": "^2.6.8",
         "apollo-link": "^1.2.13",
@@ -29,8 +32,7 @@
         "react-dom": "^16.13.0",
         "react-router-dom": "^5.1.2",
         "store": "^2.0.12",
-        "styled-components": "^5.0.0",
-        "styled-reset": "^4.1.0"
+        "styled-components": "^5.0.0"
     },
     "devDependencies": {
         "@babel/core": "^7.8.7",
@@ -64,9 +66,10 @@
         "babel-loader": "^8.0.6",
         "babel-plugin-dynamic-import-node": "^2.3.0",
         "babel-plugin-styled-components": "^1.10.7",
-        "clean-webpack-plugin": "^1.0.1",
+        "clean-webpack-plugin": "^3.0.0",
         "cross-env": "^7.0.2",
         "detect-port-alt": "1.1.6",
+        "dotenv": "^8.2.0",
         "eslint": "^6.8.0",
         "eslint-plugin-babel": "^5.3.0",
         "eslint-plugin-import": "^2.20.1",
