--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
         "react-dom": "^16.13.0",
         "react-router-dom": "^5.1.2",
         "store": "^2.0.12",
-        "styled-components": "^5.0.0"
+        "styled-components": "^5.0.1"
     },
     "devDependencies": {
         "@babel/core": "^7.8.7",
@@ -56,7 +56,7 @@
         "@types/react-loadable": "^5.5.3",
         "@types/react-router-dom": "^5.1.3",
         "@types/store": "^2.0.2",
-        "@types/styled-components": "^5.0.0",
+        "@types/styled-components": "^5.0.1",
         "@typescript-eslint/eslint-plugin": "^2.23.0",
         "@typescript-eslint/parser": "^2.23.0",
         "apollo": "^2.25.0",
@@ -93,7 +93,7 @@
         "ts-loader": "^6.2.1",
         "typescript": "^3.8.2",
         "typescript-plugin-styled-components": "^1.4.4",
-        "webpack": "4.29.1",
+        "webpack": "^4.42.1",
         "webpack-bundle-analyzer": "^3.6.0",
         "webpack-dev-server": "^3.1.14",
         "webpack-hot-middleware": "^2.25.0",
