--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
     "author": "hydrophonixfx@gmail.com",
     "private": true,
     "scripts": {
-        "start": "cross-env-shell NODE_ENV=development node --require @babel/register \"./scripts/webpack/start.js\"",
-        "build": "cross-env-shell NODE_ENV=production node --require @babel/register \"./scripts/webpack/build.js\"",
+        "start": "cross-env-shell NODE_ENV=development ts-node -P \"./tsconfig.webpack.json\" \"./scripts/webpack/start\"",
+        "build": "cross-env-shell NODE_ENV=production ts-node -P \"./tsconfig.webpack.json\" \"./scripts/webpack/build\"",
         "analyze": "webpack-bundle-analyzer \"./build/stats.json\"",
         "serve": "serve \"./build\" -s",
         "gen": "graphql-codegen --config graphql-codegen.yml",
@@ -23,7 +23,6 @@
         "apollo-link-error": "^1.1.12",
         "apollo-link-http": "^1.5.16",
         "apollo-link-token-refresh": "^0.2.7",
-        "core-js": "^3.6.4",
         "graphql": "^14.6.0",
         "graphql-tag": "^2.10.3",
         "immer": "^6.0.1",
@@ -35,28 +34,26 @@
         "styled-components": "^5.0.1"
     },
     "devDependencies": {
-        "@babel/core": "^7.8.7",
-        "@babel/plugin-proposal-class-properties": "^7.8.3",
-        "@babel/plugin-syntax-async-generators": "^7.8.4",
-        "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-        "@babel/preset-env": "^7.8.7",
-        "@babel/preset-react": "^7.8.3",
-        "@babel/preset-typescript": "^7.8.3",
-        "@babel/register": "^7.8.6",
-        "@graphql-codegen/cli": "^1.12.2",
-        "@graphql-codegen/introspection": "1.12.2",
-        "@graphql-codegen/typescript": "1.12.2",
-        "@graphql-codegen/typescript-operations": "1.12.2",
-        "@graphql-codegen/typescript-react-apollo": "1.12.2",
-        "@svgr/webpack": "^5.2.0",
+        "@types/app-root-path": "^1.2.4",
+        "@types/friendly-errors-webpack-plugin": "^0.1.2",
+        "@types/imagemin-mozjpeg": "^8.0.0",
+        "@types/imagemin-svgo": "^7.0.0",
         "@types/jwt-decode": "^2.2.1",
+        "@types/lodash-webpack-plugin": "^0.11.3",
         "@types/node": "^13.7.4",
         "@types/react": "^16.9.22",
+        "@types/react-dev-utils": "^9.0.4",
         "@types/react-dom": "^16.9.5",
         "@types/react-loadable": "^5.5.3",
         "@types/react-router-dom": "^5.1.3",
         "@types/store": "^2.0.2",
         "@types/styled-components": "^5.0.1",
+        "@types/terser-webpack-plugin": "^2.2.0",
+        "@types/webpack-bundle-analyzer": "^2.13.3",
+        "@types/webpack-dev-server": "^3.10.1",
+        "@types/webpack-hot-middleware": "^2.25.0",
+        "@types/webpack-merge": "^4.1.5",
+        "@types/webpackbar": "^4.0.0",
         "@typescript-eslint/eslint-plugin": "^2.23.0",
         "@typescript-eslint/parser": "^2.23.0",
         "apollo": "^2.25.0",
@@ -78,12 +75,10 @@
         "eslint-plugin-react-hooks": "^2.5.0",
         "file-loader": "^5.1.0",
         "friendly-errors-webpack-plugin": "^1.7.0",
-        "html-webpack-plugin": "3.2.0",
-        "imagemin-mozjpeg": "8.0.0",
-        "imagemin-pngquant": "^8.0.0",
-        "imagemin-svgo": "^7.1.0",
-        "imagemin-webpack": "^5.1.1",
+        "html-webpack-plugin": "^4.0.3",
+        "image-webpack-loader": "^6.0.0",
         "inquirer": "6.2.2",
+        "lodash-webpack-plugin": "^0.11.5",
         "moment": "^2.24.0",
         "react-dev-utils": "^10.2.0",
         "react-hot-loader": "^4.6.5",
@@ -91,6 +86,7 @@
         "source-map-loader": "^0.2.4",
         "style-loader": "0.23.1",
         "ts-loader": "^6.2.1",
+        "ts-node": "^8.8.1",
         "typescript": "^3.8.2",
         "typescript-plugin-styled-components": "^1.4.4",
         "webpack": "^4.42.1",
