--- a/.eslintrc.yaml
+++ b/.eslintrc.yaml
@@ -174,6 +174,7 @@ rules:
         - 2
         - all
         - ignoreJSX: all
+          nestedBinaryExpressions: false
     no-extra-semi: 2
     no-func-assign: 2
     no-invalid-regexp: 2
