--- a/package.json
+++ b/package.json
@@ -14,18 +14,12 @@
         "apollo:gen": "apollo codegen:generate --localSchemaFile=graphqlSchema.json --target=typescript --globalTypesFile=src/@types/graphql-global-types.ts \"../types\""
     },
     "dependencies": {
-        "@apollo/react-hooks": "^3.1.3",
+        "@apollo/client": "^3.0.2",
         "@fortawesome/fontawesome-svg-core": "^1.2.27",
         "@fortawesome/free-solid-svg-icons": "^5.12.1",
         "@fortawesome/react-fontawesome": "^0.1.9",
-        "apollo-cache-inmemory": "^1.6.5",
-        "apollo-client": "^2.6.8",
-        "apollo-link": "^1.2.13",
-        "apollo-link-error": "^1.1.12",
-        "apollo-link-http": "^1.5.16",
-        "apollo-link-token-refresh": "^0.2.7",
+        "apollo-link-token-refresh": "^0.3.1",
         "graphql": "^14.6.0",
-        "graphql-tag": "^2.10.3",
         "immer": "^6.0.1",
         "jwt-decode": "^2.2.0",
         "react": "^16.13.0",
@@ -41,11 +35,11 @@
         "@types/imagemin-svgo": "^7.0.0",
         "@types/jwt-decode": "^2.2.1",
         "@types/lodash-webpack-plugin": "^0.11.3",
+        "@types/mini-css-extract-plugin": "^0.9.1",
         "@types/node": "^13.7.4",
         "@types/react": "^16.9.22",
         "@types/react-dev-utils": "^9.0.4",
         "@types/react-dom": "^16.9.5",
-        "@types/react-loadable": "^5.5.3",
         "@types/react-router-dom": "^5.1.3",
         "@types/store": "^2.0.2",
         "@types/styled-components": "^5.0.1",
@@ -60,9 +54,6 @@
         "apollo": "^2.25.0",
         "app-root-path": "2.1.0",
         "babel-eslint": "10.0.1",
-        "babel-loader": "^8.0.6",
-        "babel-plugin-dynamic-import-node": "^2.3.0",
-        "babel-plugin-styled-components": "^1.10.7",
         "clean-webpack-plugin": "^3.0.0",
         "cross-env": "^7.0.2",
         "detect-port-alt": "1.1.6",
@@ -79,6 +70,7 @@
         "image-webpack-loader": "^6.0.0",
         "inquirer": "6.2.2",
         "lodash-webpack-plugin": "^0.11.5",
+        "mini-css-extract-plugin": "^0.9.0",
         "moment": "^2.24.0",
         "react-dev-utils": "^10.2.0",
         "react-hot-loader": "^4.6.5",
