--- a/package.json
+++ b/package.json
@@ -18,18 +18,22 @@
         "@fortawesome/fontawesome-svg-core": "^1.2.27",
         "@fortawesome/free-solid-svg-icons": "^5.12.1",
         "@fortawesome/react-fontawesome": "^0.1.9",
+        "apollo-cache-persist": "^0.1.1",
         "apollo-link-token-refresh": "^0.3.1",
+        "downloadjs": "^1.4.7",
         "graphql": "^14.6.0",
         "immer": "^6.0.1",
         "jwt-decode": "^2.2.0",
         "react": "^16.13.0",
         "react-dom": "^16.13.0",
         "react-router-dom": "^5.1.2",
+        "react-spring": "^9.0.0-rc.3",
         "store": "^2.0.12",
         "styled-components": "^5.0.1"
     },
     "devDependencies": {
         "@types/app-root-path": "^1.2.4",
+        "@types/downloadjs": "^1.4.2",
         "@types/friendly-errors-webpack-plugin": "^0.1.2",
         "@types/imagemin-mozjpeg": "^8.0.0",
         "@types/imagemin-svgo": "^7.0.0",
@@ -49,9 +53,10 @@
         "@types/webpack-hot-middleware": "^2.25.0",
         "@types/webpack-merge": "^4.1.5",
         "@types/webpackbar": "^4.0.0",
+        "@types/workbox-webpack-plugin": "^5.1.4",
         "@typescript-eslint/eslint-plugin": "^2.23.0",
         "@typescript-eslint/parser": "^2.23.0",
-        "apollo": "^2.25.0",
+        "apollo": "^2.30.1",
         "app-root-path": "2.1.0",
         "babel-eslint": "10.0.1",
         "clean-webpack-plugin": "^3.0.0",
@@ -63,7 +68,7 @@
         "eslint-plugin-import": "^2.20.1",
         "eslint-plugin-jest": "^23.8.2",
         "eslint-plugin-react": "^7.19.0",
-        "eslint-plugin-react-hooks": "^2.5.0",
+        "eslint-plugin-react-hooks": "^2.5.1",
         "file-loader": "^5.1.0",
         "friendly-errors-webpack-plugin": "^1.7.0",
         "html-webpack-plugin": "^4.0.3",
@@ -86,6 +91,8 @@
         "webpack-dev-server": "^3.1.14",
         "webpack-hot-middleware": "^2.25.0",
         "webpack-merge": "^4.2.2",
-        "webpackbar": "^4.0.0"
+        "webpack-pwa-manifest": "^4.2.0",
+        "webpackbar": "^4.0.0",
+        "workbox-webpack-plugin": "^5.1.3"
     }
 }
