--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
     "name": "portfolio-frontend",
-    "version": "0.5.0",
+    "version": "1.0.0",
     "author": "hydrophonixfx@gmail.com",
     "private": true,
+    "homepage": "vmikoliuk.pp.ua",
     "scripts": {
         "start": "cross-env-shell NODE_ENV=development ts-node -P \"./tsconfig.webpack.json\" \"./scripts/webpack/start\"",
         "build": "cross-env-shell NODE_ENV=production ts-node -P \"./tsconfig.webpack.json\" \"./scripts/webpack/build\"",
@@ -82,9 +83,9 @@
         "serve": "^11.3.0",
         "source-map-loader": "^0.2.4",
         "style-loader": "0.23.1",
-        "ts-loader": "^6.2.1",
-        "ts-node": "^8.8.1",
-        "typescript": "^3.8.2",
+        "ts-loader": "^8.0.3",
+        "ts-node": "^9.0.0",
+        "typescript": "^4.0.2",
         "typescript-plugin-styled-components": "^1.4.4",
         "webpack": "^4.42.1",
         "webpack-bundle-analyzer": "^3.6.0",
